Finishehd team links

--- a/index.html
+++ b/index.html
@@ -271,10 +271,13 @@
                   </p>
                 </div>
                 <div class = "col-sm mt-1 ml-1">
+                  <br>
+                  <br>
                   <div class = "hideme">
-                    <figure class = "figure">
+                    <figure class = "figure">                      
                       <!-- <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn"> -->
                       <img src = "static/images/nasa-worldview-2020-02-18T00_00Z-to-2020-03-26T00_00Z.gif" class = "img-fluid fadeIn">
+                      <figcaption class="figure-caption text-center"> A time lapse created from daily night light captures (2020-02-18 2020-03-26). </figcaption>
                     </figure>
                   </div>
                 </div>                  
@@ -478,47 +481,58 @@
                 <br>
                 <br>
                 <br>
-              </div>
+              </div> 
             </div>
-
-            <div class = "row text-center" id = "contact">
- 
+            <div class = "row text-center">
+              
               <div class="col">
-                <h5>Alex</h5>
+                <h5>Sky</h5>
                 <br>
-                <img src = "static/images/alex_square.jpg" class = "profile-pic">
-              </div>
-              <div class="col">
-                <h5>Eric</h5>
-                <br>
-                <img src = "static/images/eric_photo.jfif" class = "profile-pic">
+                <img src = "static/images/sky_photo.jfif" class = "circular--square">
+                <br> <br>
+                <a href = ""https://www.linkedin.com/in/sky-chen-bb1623171/" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>
               </div>
               <div class="col">
                 <h5>Solomon</h5>
                 <br>
-                <img src = "static/images/solomon.jpg" class = "profile-pic">
+                <img src = "static/images/solomon.jpg" class = "circular--square">
+                <br> <br>
+                <a href = "https://www.linkedin.com/in/alexander-hsia" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>
               </div>
-            </div>
-            <div class = "row text-center top-buffer">
-              <div class="col">
-                <h5>Sky</h5>
-                <br>
-                <img src = "static/images/sky_photo.jfif" class = "profile-pic">
-                <br>
-              </div>
-
               <div class="col">
                 <h5>Gabe</h5>
                 <br>
-                <img src = "static/images/gabe_photo.jfif" class = "profile-pic">
-                <br>
+                <img src = "static/images/gabe_photo.jfif" class = "circular--square">
+                <br> <br>
+                <a href = "https://www.linkedin.com/in/gabriel-garfinkel/" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>
               </div>
-
               <div class="col">
-                <h5>Sabrina</h5>
+                <h5>Alex</h5>
+                <br>
+                <img src = "static/images/alex_square.jpg" class = "circular--square">
+                <br> <br>
+                <a href = "https://www.linkedin.com/in/alexander-hsia" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>
+              </div>
+              <div class="col">
+                <h5>Eric</h5>
+                <br>
+                <img src = "static/images/eric_photo.jfif" class = "circular--square">
+                <br> <br>
+                <a href = "https://www.linkedin.com/in/ericlian419/" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>
               </div>
             </div>
-          </div>
+
+              <!-- <div class="col">
+                <h5>Sabrina</h5>
+              </div> -->
+
+              <div class = "row text-center">
+                <div class = "col">
+                  <br>
+                  <br>
+                  <a href = "https://github.com/ggarfink/ggarfink.github.io" class="fab fa-github fa-5x" style = "text-decoration:none"></a>
+                </div>
+              </div>
         </body>
       </div>
 </html>
@@ -554,8 +568,8 @@
       <a href = "https://www.instagram.com/solomon_the_bae/">@solomon_the_bae</a>
       <br>
       <br>
-      <!-- linkdeon profiles -->
-      <!-- <a href = "https://www.linkedin.com/in/alexander-hsia/">Alexander Hsia</a>
+      linkdeon profiles
+      <a href = "https://www.linkedin.com/in/alexander-hsia/">Alexander Hsia</a>
       <br>
       <br>
       <a href = "https://www.linkedin.com/in/ericlian419/"> Eric Lian</a>
