--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <figure class = "figure">                      
                       <!-- <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn"> -->
                       <img src = "static/images/nasa-worldview-2020-02-18T00_00Z-to-2020-03-26T00_00Z.gif" class = "img-fluid fadeIn">
-                      <figcaption class="figure-caption text-center"> A time lapse created from daily night light captures (2020-02-18 2020-03-26). </figcaption>
+                      <figcaption class="figure-caption text-center"> A time lapse generated from daily night light captures (2020-02-18 2020-03-26), created from NASA's Worldview. </figcaption>
                     </figure>
                   </div>
                 </div>                  
@@ -297,6 +297,10 @@
                     The economy is in a very tough shape right now causing many governors to overlook some of the criteria for reopening. 31 out of the 50 states have already begun to partially reopen, causing a resurgence in the total amounts of deaths due to Coronavirus. 
 
                     We sourced Government action data from multistate.us, which provides a COVID-19 Policy data at the state level.
+
+                    <br>
+                    <br>
+
                      
                     Thus, government restrictions are an important input to the model.
                   </p>
@@ -360,11 +364,14 @@
                   <br>
                   <br>
                   <br>
-                  <!-- Coronavirus Interactive Map -->
+                  <!-- Coronavirus Interactive Model -->
 
-                  <!-- If not working, turn off any adblockers and/or try using a different browser -->
-                  <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
-              </div>
+                  <figure class = "figure">
+                    <!-- If not working, turn off any adblockers and/or try using a different browser -->
+                    <iframe class = "img-fluid" src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
+                    <figcaption class="figure-caption text-center"> Interactive 3d model of Coronavirus. Note: This model was sourced from Biodigital.</figcaption>
+                  </figure>
+                </div>
               </div>
             </div>
           </section>
@@ -524,74 +531,16 @@
 
               <!-- <div class="col">
                 <h5>Sabrina</h5>
+                 <a href = "https://www.linkedin.com/in/sabrina-tobar-thommel/">Sabrina Tobar Thommel</a>
+
               </div> -->
 
             <div class = "row text-center">
-              <div class = "col">
-                <br>
-                <br>
-                <a href = "https://github.com/ggarfink/ggarfink.github.io" class="fab fa-github fa-5x" style = "text-decoration:none"></a>
-              </div>  
+              <br>
+              <br>
+              <a href = "https://github.com/ggarfink/ggarfink.github.io" class="fab fa-github fa-5x" style = "text-decoration:none"></a>
             </div>
           </div>
         </body>
       </div>
 </html>
-
-
-
-
-<!-- 
-<div class="row justify-content-center mb-5">
-  <div class="col-md-8 text-center">
-    <h3>The Team</h3>
-    <p>
-      <title>Instagrams</title>
-      <br>
-      <a href = "https://www.instagram.com/mrccovid192020/">@mrccovid192020</a>
-      <br>
-      <br>
-      <a href = "https://www.instagram.com/hsia.alexander/">@hsia.alexander</a>
-      <br>
-      <br>
-      <a href = "https://www.instagram.com/erriclian/">@erriclian</a>
-      <br>
-      <br>
-      <a href = "https://www.instagram.com/gabriel.garfinkel/">@gabriel.garfinkel</a>
-      <br>
-      <br>
-      <a href = "https://www.instagram.com/sabtt17/">@sabtt17</a>
-      <br>
-      <br>
-      <a href = "https://www.instagram.com/skychen1060/">@skychen1060</a>
-      <br>
-      <br>
-      <a href = "https://www.instagram.com/solomon_the_bae/">@solomon_the_bae</a>
-      <br>
-      <br>
-      linkdeon profiles
-      <a href = "https://www.linkedin.com/in/alexander-hsia/">Alexander Hsia</a>
-      <br>
-      <br>
-      <a href = "https://www.linkedin.com/in/ericlian419/"> Eric Lian</a>
-      <br>
-      <br>
-      <<a href = "https://www.linkedin.com/in/gabriel-garfinkel/">Gabriel Garfinkel</a>
-      <br>
-      <br>
-      <a href = "https://www.linkedin.com/in/sabrina-tobar-thommel/">Sabrina Tobar Thommel</a>
-      <br>
-      <br>
-      <a href = "https://www.linkedin.com/in/sky-chen-bb1623171/">Sky Chen</a>
-      <br>
-      <br>
-      <a href = "https://www.linkedin.com/in/solomon-chang-161b2b178/">Solomon Chang</a>
-      <br> -->
-      <!-- Let's keep in touch!<br><br>
-      <a href = "tel: +720 499 7315" class="fas fa-mobile-alt fa-2x hover_tel" style = "text-decoration:none"></a>   
-      <a href = "https://www.linkedin.com/in/alexander-hsia" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>   
-      <a href = "mailto: ahsia@umich.edu" class="far fa-envelope fa-2x" style = "text-decoration:none"></a>   
-      <a href = "https://github.com/ahsia22" class="fab fa-github fa-2x" style = "text-decoration:none"></a> -->
-    <!-- </p>
-  </div>
-</div> -->
