--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <script type="text/javascript" src="static/js/main.js"></script>
         <script type="text/javascript" src="static/js/counterup.js"></script>
         <script type="text/javascript" src="static/js/waypoints.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script> 
       </head>
     
       <div ng-app = "" ng-init = "name = 'MRC'" class="home">
@@ -365,6 +371,11 @@
                   <br>
                   <br>
                   <!-- Coronavirus Interactive Model -->
+                  <div id='interactive-map' style="height:500px">
+                    <script src='us_states.js'></script>
+                    <script src='gz_2010_us_050_00_500k.js'></script>
+                    <script type='text/javascript' src= 'js_experiment.js'></script>
+                  </div>
 
                   <figure class = "figure">
                     <!-- If not working, turn off any adblockers and/or try using a different browser -->
