--- a/index.html
+++ b/index.html
@@ -366,21 +366,25 @@
                   <br>
                   <!-- Insert Interactive Map -->
 
-                  <h5> Interactive 3D Model of Coronavirus </h5>
-                  <br>
-                  <br>
-                  <br>
-                  <!-- Coronavirus Interactive Model -->
                   <div id='interactive-map' style="height:500px">
                     <script src='us_states.js'></script>
                     <script src='gz_2010_us_050_00_500k.js'></script>
                     <script type='text/javascript' src= 'js_experiment.js'></script>
                   </div>
+                  <br>
+                  <br>
+                  <br>
+
+                  <h5> Interactive 3D Model of Coronavirus </h5>
+                  <br>
+                  <br>
+                  <br>
+                  <!-- Coronavirus Interactive Model -->
 
                   <figure class = "figure">
                     <!-- If not working, turn off any adblockers and/or try using a different browser -->
-                    <iframe class = "img-fluid" src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
-                    <figcaption class="figure-caption text-center"> Interactive 3d model of Coronavirus. Note: This model was sourced from Biodigital.</figcaption>
+                    <iframe height="100%" class = "img-fluid" src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
+                    <figcaption class="figure-caption text-center"> Interactive 3D model of Coronavirus. Note: This model was sourced from Biodigital.</figcaption>
                   </figure>
                 </div>
               </div>
