change in the world

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     From the invention of the first computer, technology has drastically improved our collective ability to understand and identify complex relationships.  
                     Utilizing big data, NASA & JXA satellite data, and machine learning, we created predictive models to help to empower those in need by giving us insight into the specific populations and regions needing the most amount of resources and the best way to deploy the limited amount of resources the earth has. 
                     By focusing on critical trends in pollution, government policies, demographics / social and economic status,  weather and pre-existing conditions, we can find the most effective way of deploying their sources we have to effectively combat Coronavirus. Right now is the time, where we create a lasting impact to sustain our Earth.
-                    The purpose of the Project Prometheus is predicting the areas most impacted by Coronavirus spread using machine learning on a collection of satellite and earth-based data.
+                    The purpose of the Project Prometheus is predicting the areas most impacted by Coronavirus spread using machine learning with the collection of satellite and earth-based data.
                     </p>
                 </div>
               </div>               
