--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
                 
                 <div class = "col-lg text-left mt-1 ml-1">
                   <h2 style='width:fit-content; width:-webkit-fit-content; width:-moz-fit-content;'> Environment <br></h2>
-                  <p class> Research done by scientists at Harvard T.H. Chan School of public health suggest that warmer weather does not halt transmission of the virus, contrary to popular belief. (Powell, 2020).
-                    Research done by scientists in China also supports this hypothesis.
+                  <p class> Research done by scientists from China and from Harvard suggest that warmer weather does not halt transmission of the virus, contrary to popular belief. (Powell, 2020).
                     Utilizing meteorological factors of 122 cities, they concluded that there is no evidence of decline when the temperature increases. (Xie, 2020).
-                    These results are particularly concerning, as many government officials rely on warmer weather to "mitigate" the disease's infectivity. 
+                    These results are particularly concerning, as many government officials plan on easing restrictions based on this false assumption. 
                     <br>
                     <br>
                     As a result, one may hypothesize that that many may rely on this false assumption to guide their decision-making, resulting in "warmer areas" having more relaxed policies/behaviors and less social distancing. 
