made obesity choropleth

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 
                   <p class> 
 
-                    We also fed in historical numer of cases, deaths, incidence rate, new cases, and population per county into the model. This data is important because it provides a historic/near-present trajectory of the number of cases and deaths.
+                    We also fed in historical number of cases, deaths, incidence rate, new cases, and population per county into the model. This data is important because it provides a historic/near-present trajectory of the number of cases and deaths.
 
 
-                    We gathered this information via Johns hopkins University's COVID-19 "USCounties_time" records.
+                    We gathered this information via Johns Hopkins University's COVID-19 "USCounties_time" records.
 
                     <br>
                     <br>
@@ -225,10 +225,10 @@
                   </p>
                 </div>
                 <div class = "col-sm mt-1 ml-1">
-                  <div class = "hideme">
-                    <figure class = "figure">
-                      <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn">
-                    </figure>
+                  <div id='health-interactive-map' style="height:500px">
+                    <script src='us_states.js'></script>
+                    <script src='test_save.js'></script>
+                    <script src='obesity_per_state.js'></script>
                   </div>
                 </div>                  
               </div>
