removed obesity map

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
                   </p>
                 </div>
                 <div class = "col-sm mt-1 ml-1">
-                  <div id='health-interactive-map' style="height:500px">
-                    <script src='us_states.js'></script>
-                    <script src='test_save.js'></script>
-                    <script src='obesity_per_state.js'></script>
+                  <div class = "hideme">
+                    <figure class = "figure">
+                      <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn">
+                    </figure>
                   </div>
                 </div>                  
               </div>
