--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn">
+                      <img src = "open.png" class = "word-chart img-fluid fadeIn">
+                      <img src = "status.png">
                     </figure>
                   </div>
                 </div>                  
