--- a/index.html
+++ b/index.html
@@ -299,8 +299,9 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "open.png">
-                      <img src = "status.png">
+                      <img src = "open.png" style="width:66%; height:66%;"> 
+                      <br>
+                      <img src = "status.png" style="width:66%; height:66%;">
                     </figure>
                   </div>
                 </div>                  
@@ -432,7 +433,9 @@
                     <script src='test_save.js'></script>
                     <script type='text/javascript' src= 'js_experiment.js'></script>
                   </div>
-                  <p>Note: Data above as of 05/27/2020.</p>
+                  <br>
+                  <p>The above graph is based on the hotspot index, which is described how much of a hotspot
+                    the current location is based on our model. Note: Data above as of 05/27/2020.</p>
                   <br>
                   <br>
                   <br>
