--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                     <script type='text/javascript' src= 'js_experiment.js'></script>
                   </div>
                   <br>
-                  <p>The above graph is based on the hotspot index, which is described how much of a hotspot
+                  <p>The above graph is based on the hotspot index, which describes how much of a hotspot
                     the current location is based on our model. Note: Data above as of 05/27/2020.</p>
                   <br>
                   <br>
