--- a/index.html
+++ b/index.html
@@ -500,7 +500,13 @@
                           Leonard, A. (2020, April 24). Hokkaido Forced to Reinstate Lockdown After Coronavirus Returned. Retrieved May 29, 2020, from https://time.com/5826918/hokkaido-coronavirus-lockdown/
                         <br>
                         <br>
+                        Lusk, J. (2020, May 01). NGF: Only four states remain closed to golf with no announced dates to reopen. Retrieved May 31, 2020, from https://golfweek.usatoday.com/2020/05/01/ngf-only-four-states-closed-golf/
+                        <br>
+                        <br>
                           N. (Ed.). (2020, April 22). COVID-19 in Racial and Ethnic Minority Groups. Retrieved May 29, 2020, from https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/racial-ethnic-minorities.html
+                        <br>
+                        <br>
+                          T. (2020, April 24). UPDATE State officials say reopening will be regional, data-driven. Retrieved June 01, 2020, from https://www.dailyitem.com/news/local_news/update-state-officials-say-reopening-will-be-regional-data-driven/article_26f4cc1c-8580-11ea-a7ae-f3cb259dd4ac.html
                         <br>
                         <br>
                           Ogden, C. (2017, August 01). Overweight & Obesity Statistics. Retrieved May 30, 2020, from https://www.niddk.nih.gov/health-information/health-statistics/overweight-obesity
