--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn">
+                      <img src = "actual_health_screenshot.png" class = "img-fluid fadeIn">
                     </figure>
                   </div>
                 </div>                  
@@ -299,9 +299,9 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "open.png" style="width:66%; height:66%;"> 
+                      <img src = "open.png" style="width:66%; height:66%;" class = "img-fluid fadeIn"> 
                       <br>
-                      <img src = "status.png" style="width:66%; height:66%;">
+                      <img src = "status.png" style="width:66%; height:66%;" class = "img-fluid fadeIn">
                     </figure>
                   </div>
                 </div>                  
