Images for gov fixed

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "open.png" style="width:66%; height:66%;" class = "img-fluid fadeIn"> 
+                      <img src = "Open.png" style="width:66%; height:66%;" class = "img-fluid fadeIn"> 
                       <br>
-                      <img src = "status.png" style="width:66%; height:66%;" class = "img-fluid fadeIn">
+                      <img src = "Status.png" style="width:66%; height:66%;" class = "img-fluid fadeIn">
                     </figure>
                   </div>
                 </div>                  
