--- a/index.html
+++ b/index.html
@@ -297,9 +297,10 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "Open.png" style="width:66%; height:66%;" class = "img-fluid fadeIn"> 
-                      <br>
-                      <img src = "Status.png" style="width:66%; height:66%;" class = "img-fluid fadeIn">
+                      <img src = "Open.png" style="width:80%; height:80%;" class = "img-fluid fadeIn"> 
+                      <figcaption class="figure-caption text-center"> Figure depicting states open/closed/restrictions. </figcaption>
+                      <!-- <br> -->
+                      <!-- <img src = "Status.png" style="width:66%; height:66%;" class = "img-fluid fadeIn"> -->
                     </figure>
                   </div>
                 </div>                  
