pie charts and logo change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <nav class="navbar navbar-expand-sm ml-auto sticky-top bottomBorderRedgrad backcolorWhite">
             <!-- Currently sticky option is off, to have sticky option: sticky-top -->
 
-            <img src = "MRC.png" class = "img-fluid" style="width: 50px; height: 50px">
+            <img src = "MRC.png" class = "img-fluid" style="width: 80px; height: 80px; border-radius: 40px; margin-right: 50px">
             <a class="navbar-brand">
               <h1 ng-bind = "name"></h1>
             </a>   
@@ -452,11 +452,11 @@
                   
                   <div style="display: flex">
                   <figure class = "figure" style = "flex: 50%">
-                    <img src = "static/images/pert_14_7.png" class = "img-fluid fadeIn">
+                    <img src = "static/images/pert_14_7_single.png" class = "img-fluid fadeIn">
                     <figcaption class="figure-caption text-center"> This pie chart shows the perturbation effect for each of the feature as a percentage of the total sum of effects. The perturbation is done by adding each feature to a random distribution between 0 and 0.2. The higher the percentage, the higher the error will increase when the feature is perturbed, which might imply more importance to the model's prediction.</figcaption>
                   </figure>
                   <figure class = "figure" style = "flex: 50%">
-                    <img src = "static/images/perm_14_7.png" class = "img-fluid fadeIn">
+                    <img src = "static/images/perm_14_7_single.png" class = "img-fluid fadeIn">
                     <figcaption class="figure-caption text-center"> This pie chart shows the permutation effect for each of the feature as a percentage of the toal sum of effects. The permutation is done by randomly shuffling each feature. The higher the percentage, the higher the error will increase when the feature is permuted, which might imply more importance to the model's prediction.</figcaption>
                   </figure>
                   </div>
