--- a/index.html
+++ b/index.html
@@ -384,18 +384,15 @@
                     '% Smokers', '% Adults with Obesity', 'Food Environment Index',
                     'Primary Care Physicians Ratio', '% Vaccinated', '% Some College',
                     '% Severe Housing Problems', 'ColumnAmountNO2',
-                    'ColumnAmountNO2CloudScreened', 'Night Light', 'Hotspot Index',
-                    'Hotspot Index_rank']</code>
+                    'ColumnAmountNO2CloudScreened', 'Night Light', 'Hotspot Index']</code>
                     <br>
                     <br>
 
                     After generating the model's predictions, we plotted the values on LeafletJS to generate the interactive Choropleth map.
 
-                    <h5> Applications & Future Work </h5>
+                    <h5> Future Work </h5>
                     <br>
-                    
-                    The Choropleth offers exciting applications and insight into the propagation of Coronavirus. 
-                    Our hope is that the predictions of hot spot indices from the LSTM machine learning model
+                    In the future, we will explore more complex models besides LSTM, collect more data to reduce the amount of missing data, and perhaps design and deploy our websites in a more sophisticated manner such as using React.js to make the website dynamic. We might also create a pipeline to automatically collect satellite and coronavirus data for each day, update the database and improve the model’s accuracy. For the time being, we hope that our map is a valuable resource for the government and communities, as they can use it as a guide to determine how resources should be best deployed to save lives while maintaining normalcy where possible.
                   </p>
                 </div>
 
