pie chart resize

--- a/index.html
+++ b/index.html
@@ -447,16 +447,14 @@
                     <figcaption class="figure-caption text-center"> Interactive 3D model of Coronavirus. Note: This model was sourced from Biodigital.</figcaption>
                   </figure>
                   
-                  <div style="display: flex">
-                  <figure class = "figure" style = "flex: 50%">
+                  <figure class = "figure">
                     <img src = "static/images/pert_14_7_single.png" class = "img-fluid fadeIn">
                     <figcaption class="figure-caption text-center"> This pie chart shows the perturbation effect for each of the feature as a percentage of the total sum of effects. The perturbation is done by adding each feature to a random distribution between 0 and 0.2. The higher the percentage, the higher the error will increase when the feature is perturbed, which might imply more importance to the model's prediction.</figcaption>
                   </figure>
-                  <figure class = "figure" style = "flex: 50%">
+                  <figure class = "figure">
                     <img src = "static/images/perm_14_7_single.png" class = "img-fluid fadeIn">
                     <figcaption class="figure-caption text-center"> This pie chart shows the permutation effect for each of the feature as a percentage of the toal sum of effects. The permutation is done by randomly shuffling each feature. The higher the percentage, the higher the error will increase when the feature is permuted, which might imply more importance to the model's prediction.</figcaption>
                   </figure>
-                  </div>
                 </div>
               </div>
             </div>
