changed model iframe

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
                   <figure class = "figure">
                     <!-- If not working, turn off any adblockers and/or try using a different browser -->
-                    <iframe class = "img-fluid" src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
+                    <iframe style= "height:1000px width: auto" class = "img-fluid" src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
                     <figcaption class="figure-caption text-center"> Interactive 3D model of Coronavirus. Note: This model was sourced from Biodigital.</figcaption>
                   </figure>
                   
@@ -496,9 +496,6 @@
                         <br>
                         <br>
                           Jari Hovila, Antii Arola, and Johanna Tamminen (2014), OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3, NASA Goddard Space Flight Center, Goddard Earth Sciences Data and Information Services Center (GES DISC), Accessed: [Data Access Date], 10.5067/Aura/OMI/DATA2028;
-                        <br>
-                        <br>
-                          J. (Ed.). (2012, May 18). Global Change Observation Mission - Water "SHIZUKU" (GCOM-W). Retrieved June 01, 2020, from https://global.jaxa.jp/projects/sat/gcom_w/
                         <br>
                         <br>
                           Levy, R. (2019, May 16). Earth at Night (Black Marble) 2016 Grayscale Maps. Retrieved May 30, 2020, from https://visibleearth.nasa.gov/images/144897/earth-at-night-black-marble-2016-grayscale-maps
