--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
             </li>
           </nav>
           
-          <section class = "section backcolorMist" id = "intro" style="background-image: url('static/images/MRC.png');background-size: cover;">
+          <section class = "section backcolorMist red_grad_bgd" id = "intro">
             <div class = "container">
               <!-- Introduction-->
               <div class = "row">
                 <div class = "col-lg">
                   <h2> Project Prometheus </h2>
-                  <p class = "text-left mt-1 ml-1" style="color: white">
+                  <p class = "text-left mt-1 ml-1">
 
                     The purpose of Project Prometheus is to predict the areas of the U.S. (and globally, in the future) which will be most affected by Coronavirus by utilizing machine learning tools.
                     By forecasting future severity rates (via our "Hotspot index"), it allows us to better balance government intervention and economic activity to minimize the negative impact to communities.
