brought back MRC

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <!-- Currently sticky option is off, to have sticky option: sticky-top -->
 
             <img src = "static/images/MRC.png" class = "img-fluid" style="width: 80px; height: 80px; border-radius: 40px; margin-right: 50px">
-  <!--           <a class="navbar-brand">
+            <a class="navbar-brand" style="margin-right: 10px">
               <h1 ng-bind = "name"></h1>
-            </a>    -->
+            </a>   
             
             <!-- Toggler/collapsibe Button -->
             
