--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <br>
                   <!-- Coronavirus Interactive Model -->
 
-                  <div style= "height:500px; width: 700px">
+                  <div style= "height:500px; width: 700px; align-content: center; padding-bottom: 20px">
                     <!-- If not working, turn off any adblockers and/or try using a different browser -->
                     <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
                     <p class="figure-caption text-center"> Interactive 3D model of Coronavirus. Note: This model was sourced from Biodigital.</p>
