--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
               <!-- Introduction-->
               <div class = "row">
                 <div class = "col-lg">
-                  <h2> Project Prometheus </h2>
-                  <p class = "text-left mt-1 ml-1">
+                  <h2 style="color: white"> Project Prometheus </h2>
+                  <p class = "text-left mt-1 ml-1" style="color: white">
 
                     The purpose of Project Prometheus is to predict the areas of the U.S. (and globally, in the future) which will be most affected by Coronavirus by utilizing machine learning tools.
                     By forecasting future severity rates (via our "Hotspot index"), it allows us to better balance government intervention and economic activity to minimize the negative impact to communities.
@@ -151,7 +151,7 @@
                   <br>
                   <!-- Coronavirus Interactive Model -->
 
-                  <div style= "height:500px; width: 700px; align-content: center; padding-bottom: 20px">
+                  <div style= "height:500px; width: 100%; align-content: center; padding-bottom: 80px">
                     <!-- If not working, turn off any adblockers and/or try using a different browser -->
                     <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
                     <p class="figure-caption text-center"> Interactive 3D model of Coronavirus. Note: This model was sourced from Biodigital.</p>
